continuando con los endpoint Perfil-Topico-Usuario